# literun

./: DOCS.md  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: async_agent.py  async_llm.py  run_agent.py  run_llm.py  runtime_context.py  streaming_agent.py
src/literun/: __init__.py  agent.py  args_schema.py  constants.py  errors.py  events.py  items.py  llm.py  logger.py  message.py  prompt.py  prompt_message.py  prompt_template.py  results.py  runner.py  tool.py  usage.py
src/literun/providers/: __init__.py  base.py
src/literun/providers/gemini/: __init__.py  client.py  responses.py  streams.py
src/literun/providers/openai/: __init__.py  client.py  responses.py  streams.py
src/openai_agent/: __init__.py  agent.py  args_schema.py  llm.py  output_schema.py  prompt_message.py  prompt_template.py  tool.py  utils.py
tests/: __init__.py  helpers.py  test_agent.py  test_async_agent.py  test_async_llm.py  test_future_annotations.py  test_gemini_adapters.py  test_llm.py  test_openai_adapters.py  test_prompt.py  test_runner_errors.py  test_runtime_context.py  test_tool.py  test_usage.py
