[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "literun"
description = "A minimal, provider-agnostic agent runtime for OpenAI and Gemini"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Kaustubh Trivedi", email = "trivedikaustubh01@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

version = "0.3.1"
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "pydantic>=2.12.0,<3.0.0",
]

[project.optional-dependencies]
openai = ["openai>=2.11.0,<3.0.0"]
gemini = ["google-genai>=1.55.0,<2.0.0"]
all = [
    "openai>=2.11.0,<3.0.0",
    "google-genai>=1.55.0,<2.0.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
]

[project.urls]
Homepage = "https://github.com/kaustubh-tr/literun"
Source = "https://github.com/kaustubh-tr/literun"
Issues = "https://github.com/kaustubh-tr/literun/issues"
Readme = "https://github.com/kaustubh-tr/literun#readme"
Documentation = "https://github.com/kaustubh-tr/literun/blob/main/DOCS.md"

[tool.hatch.build.targets.wheel]
packages = ["src/literun"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
